syntax = "proto3";

package messages;

option java_outer_classname = "ProducerRecord";

message ProducerMessage{
  string topic = 1;
  bytes data = 2;
}