syntax = "proto3";

option java_package = "messages";
option java_outer_classname = "Subscribe";

message SubscribeRequest{
  string topic = 1;
}